[gd_scene load_steps=5 format=3 uid="uid://d27ofmjhwh6t6"]

[ext_resource type="Texture2D" uid="uid://d28b72gywou33" path="res://tilemap_packed.png" id="1_im0tn"]
[ext_resource type="Script" uid="uid://8eu8ufxwbwyi" path="res://block.gd" id="1_xfwl5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5d32t"]
size = Vector2(21, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfwl5"]
size = Vector2(1, 18)

[node name="block" type="CharacterBody2D"]
script = ExtResource("1_xfwl5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_im0tn")
region_enabled = true
region_rect = Rect2(84, 189, 21, 21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5d32t")

[node name="blockright" type="Area2D" parent="."]
disable_mode = 2
gravity_point = true
gravity_point_center = Vector2(0, 8)
gravity_direction = Vector2(0, 8)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="blockright"]
position = Vector2(-11, 0)
shape = SubResource("RectangleShape2D_xfwl5")
debug_color = Color(0.70196074, 0, 0, 0.41960785)

[node name="blockleft" type="Area2D" parent="."]
disable_mode = 2
gravity_point = true
gravity_point_center = Vector2(0, 8)
gravity_direction = Vector2(0, 8)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="blockleft"]
position = Vector2(11, 0)
shape = SubResource("RectangleShape2D_xfwl5")

[connection signal="body_entered" from="blockright" to="." method="_on_blockright_body_entered"]
[connection signal="body_exited" from="blockright" to="." method="_on_blockright_body_exited"]
[connection signal="body_entered" from="blockleft" to="." method="_on_blockleft_body_entered"]
[connection signal="body_exited" from="blockleft" to="." method="_on_blockleft_body_exited"]
